--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -228,6 +228,7 @@ tests:
     dependencies: 
     - haskellInDepth
     - suntimes-lib
+    - hspec >= 2.5 && <= 2.10
     - tasty >= 0.11 && < 1.5
     - tasty-hspec >= 1.1 && < 1.2
     default-extensions:
