--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -21,6 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.14 && < 5
+- ghc-prim >= 0.6.0
 - fmt
 - mtl >= 2.0 && < 2.3
 - transformers >= 0.5 && < 0.6
