--- a/haskell/main/hie.yaml
+++ b/haskell/main/hie.yaml
@@ -4,5 +4,9 @@ cradle:
       component: "playground:lib"
     - path: "./app"
       component: "playground:exe:main"
+    - path: "./app"
+      component: "playground:exe:main"
+    - path: "./test"
+      component: "playground:test:maintest"
     - path: "./realWorldHaskell"
       component: "playground:exe:rwh"
