--- a/haskell/haskellInDepth/haskellInDepth.cabal
+++ b/haskell/haskellInDepth/haskellInDepth.cabal
@@ -151,9 +151,10 @@ library hid-lib
   build-depends:
       base >=4.14 && <5
     , bytestring >=0.10 && <0.12
+    , criterion
     , directory ==1.3.*
-    , exceptions
-    , extra
+    , exceptions ==0.10.*
+    , extra >=1.5 && <1.8
     , filepath >=1.4.1 && <1.5
     , fmt
     , ghc-prim >=0.6.0
