--- a/haskell/haskellInDepth/haskellInDepth.cabal
+++ b/haskell/haskellInDepth/haskellInDepth.cabal
@@ -365,6 +365,47 @@ executable iplookup
     , unix-compat ==0.5.*
   default-language: Haskell2010
 
+executable isprime
+  main-is: Main.hs
+  other-modules:
+      Paths_haskellInDepth
+  autogen-modules:
+      Paths_haskellInDepth
+  hs-source-dirs:
+      src/isprime
+  default-extensions:
+      DeriveFoldable
+      DeriveFunctor
+      DeriveTraversable
+      DeriveGeneric
+      DeriveDataTypeable
+      ExplicitForAll
+      ScopedTypeVariables
+      StandaloneDeriving
+      TypeApplications
+      MultiParamTypeClasses
+      TypeSynonymInstances
+      RecordWildCards
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  build-depends:
+      base >=4.14 && <5
+    , bytestring >=0.10 && <0.12
+    , directory ==1.3.*
+    , exceptions ==0.10.*
+    , extra >=1.5 && <1.8
+    , filepath >=1.4.1 && <1.5
+    , fmt
+    , ghc-prim >=0.6.0
+    , haskellInDepth
+    , mtl >=2.0 && <2.3
+    , text ==1.2.*
+    , text-show >=3.0 && <4
+    , time >=1.8 && <1.12
+    , timeit >=2.0 && <3
+    , transformers ==0.5.*
+    , unix-compat ==0.5.*
+  default-language: Haskell2010
+
 executable main
   main-is: main.hs
   other-modules:
@@ -385,49 +426,6 @@ executable main
       Paths_haskellInDepth
   hs-source-dirs:
       ./src/main
-  default-extensions:
-      DeriveFoldable
-      DeriveFunctor
-      DeriveTraversable
-      DeriveGeneric
-      DeriveDataTypeable
-      ExplicitForAll
-      ScopedTypeVariables
-      StandaloneDeriving
-      TypeApplications
-      MultiParamTypeClasses
-      TypeSynonymInstances
-      RecordWildCards
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
-  build-depends:
-      base >=4.14 && <5
-    , bytestring >=0.10 && <0.12
-    , directory ==1.3.*
-    , exceptions
-    , extra
-    , filepath >=1.4.1 && <1.5
-    , fmt
-    , ghc-prim >=0.6.0
-    , haskellInDepth
-    , mtl >=2.0 && <2.3
-    , random
-    , text
-    , text-show >=3.0 && <4
-    , time >=1.8 && <1.12
-    , transformers ==0.5.*
-    , unix-compat ==0.5.*
-  default-language: Haskell2010
-
-executable stockquotes
-  main-is: Main.hs
-  other-modules:
-      QuoteData
-      Params
-      StatReport
-      HtmlReport
-      Charts
-  hs-source-dirs:
-      src/stockquotes/
   default-extensions:
       DeriveFoldable
       DeriveFunctor
