--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -71,7 +71,8 @@ executables:
     - haskellInDepth
     - text
     - random
-    - criterion
+    - criterion >= 1.5.12 && < 2
+    - timeit >= 2.0 && < 3
 
   du:
     main: Main.hs
@@ -82,7 +83,14 @@ executables:
       - optparse-applicative >= 0.14 && < 0.17
       - text >=1.2 && <1.3
       - text-show >=3.0 && <4
-      - extra >=1.5 && <1.8
+    default-extensions: []
+
+  isprime:
+    main: Main.hs
+    source-dirs: src/isprime
+    dependencies:
+      - haskellInDepth
+      - timeit >= 2.0 && < 3
     default-extensions: []
 
   stockquotes:
