--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -34,6 +34,7 @@ dependencies:
 - filepath >= 1.4.1 && < 1.5
 - directory >= 1.3 && < 1.4
 - unix-compat >= 0.5 && < 0.6
+- deepseq
 
 ghc-options:
 - -Wall
@@ -287,3 +288,11 @@ benchmarks:
       - haskellInDepth
       - isprime-lib
       - criterion >= 1.5.12 && < 2
+  iplookup-benchmark:
+    main: Main.hs
+    source-dirs: benchmark/iplookup
+    dependencies:
+      - haskellInDepth
+      - iplookup-lib
+      - criterion >= 1.5.12 && < 2
+      - random
