--- a/haskell/haskellInDepth/package.yaml
+++ b/haskell/haskellInDepth/package.yaml
@@ -246,6 +246,8 @@ tests:
     - random
     - tasty >= 0.11 && < 1.5
     - tasty-hspec >= 1.1 && < 1.2
+    - tasty-hedgehog >= 0.1 && <= 1.2
+    - hedgehog >= 0.5 && < 1.1
 
   suntimes-test:
     main:               Main.hs
