--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -37,6 +37,7 @@ dependencies:
 - deepseq
 
 ghc-options:
+- -XHaskell2010
 - -rtsopts=all
 - -fprof-auto
 - -fprof-auto-top
@@ -52,6 +53,9 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+
+# NOTE: "language" field not recognized?
+# language: Haskell2010
 
 default-extensions:
 - DeriveFoldable
