--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -24,6 +24,7 @@ dependencies:
 - ghc-prim >= 0.6.0
 - fmt
 - mtl >= 2.0 && < 2.3
+- monad-logger >= 0.3.37 && < 0.4
 - transformers >= 0.5 && < 0.6
 - time >=1.8 && <1.12
 - bytestring >=0.10 && <0.12
@@ -92,8 +93,40 @@ executables:
     # - -ddump-to-file
     # - -ddump-file-prefix=mydump
     # - -ddump-deriv
+  rpc-lib:
+    main:               Main.hs
+    source-dirs:        ./src/rpc
+    dependencies:
+    - cereal >= 0.5 && <0.6
+    - network >= 2.8 && <3.2
+    - connection >= 0.3 && <0.4
+    - network-simple >=0.4.5 && <0.5
+    - template-haskell >=2.18 && <2.19
+    - haskell-src-exts >= 1.20 && <1.24
+    - haskell-src-meta >= 0.6 && < 0.9
+    - optparse-applicative >= 0.17 && < 0.20
 
 internal-libraries:
+  rpc-lib-internal:
+    source-dirs:        ./src/rpc
+    exposed-modules:
+    - RPC.Base
+    - RPC.Client
+    - RPC.Server
+    - RPC.Common
+    - RPC.Messaging
+    - RPC.Exception
+    - RPC.Parse
+    dependencies:
+    - cereal >= 0.5 && <0.6
+    - network >= 2.8 && <3.2
+    - connection >= 0.3 && <0.4
+    - network-simple >=0.4.5 && <0.5
+    - template-haskell >=2.18 && <2.19
+    - haskell-src-exts >= 1.20 && <1.24
+    - haskell-src-meta >= 0.6 && < 0.9
+    - optparse-applicative >= 0.17 && < 0.20
+
   hid-lib:
     source-dirs: ./src/main
     exposed-modules:
@@ -103,6 +136,7 @@ internal-libraries:
       - Chapter12.GenericsSQL
       - Chapter12.TemplateProjection
       - Chapter12.TemplateReify
+      - Chapter12.TemplateQuasiQuote
     dependencies: 
       - haskellInDepthGHC9
       - random
@@ -125,5 +159,22 @@ tests:
     - tasty-hedgehog >= 0.1 && <= 1.4
     - hspec >= 0.1 && <= 3
     - hedgehog >= 0.5 && < 1.2
+    - template-haskell >=2.18 && <2.19
+
+  rpc-test:
+    main:               Main.hs
+    source-dirs:      ./test/rpc
+    dependencies: 
+    - rpc-lib-internal
+    - cereal >= 0.5 && <0.6
+    - network >= 2.8 && <3.2
+    - connection >= 0.3 && <0.4
+    - network-simple >=0.4.5 && <0.5
+    - tasty >= 0.11 && < 1.6
+    - tasty-hspec >= 1.1 && < 1.3
+    - tasty-hedgehog >= 0.1 && <= 1.4
+    - hspec >= 0.1 && <= 3
+    - hedgehog >= 0.5 && < 1.2
+    - template-haskell >=2.18 && <2.19
 
 benchmarks: {}
