--- a/haskell/haskellInDepthGHC9/package.yaml
+++ b/haskell/haskellInDepthGHC9/package.yaml
@@ -94,7 +94,7 @@ executables:
     # - -ddump-file-prefix=mydump
     # - -ddump-deriv
   rpc-lib:
-    main:               Main.hs
+    main:               main.hs
     source-dirs:        ./src/rpc
     dependencies:
     - cereal >= 0.5 && <0.6
@@ -104,6 +104,16 @@ executables:
     - template-haskell >=2.18 && <2.19
     - haskell-src-exts >= 1.20 && <1.24
     - haskell-src-meta >= 0.6 && < 0.9
+    - optparse-applicative >= 0.17 && < 0.20
+
+  rpc-sample:
+    main:               main.hs
+    source-dirs:        ./src/rpc-sample
+    dependencies:
+    - rpc-lib-internal
+    - network >= 2.8 && <3.2
+    - connection >= 0.3 && <0.4
+    - network-simple >=0.4.5 && <0.5
     - optparse-applicative >= 0.17 && < 0.20
 
 internal-libraries:
@@ -166,6 +176,7 @@ tests:
     source-dirs:      ./test/rpc
     dependencies: 
     - rpc-lib-internal
+    - random
     - cereal >= 0.5 && <0.6
     - network >= 2.8 && <3.2
     - connection >= 0.3 && <0.4
